fix: features, sequel, team spacing fixes

--- a/src/components/sections/Sequel/styles.module.css
+++ b/src/components/sections/Sequel/styles.module.css
@@ -3,7 +3,7 @@
     border-radius: 50px;
 }
 .sequelWrapper {
-    margin-top: 246px;
+    margin-top: 6rem;
     padding: 1px;
     background: linear-gradient(180deg, #FFB5BC 0%, #501C21 100%);
     border-radius: 50px;
